// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ListingActions RowActions should render Bucket directory 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-4"
  >
    <div
      className="makeStyles-container-2"
    >
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <form
        action="/zip/dir/bucketA/dirB/"
        className="makeStyles-item-3"
        method="POST"
        style={
          {
            "flexShrink": 0,
          }
        }
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          className="makeStyles-root-6 makeStyles-item-3"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Bucket file 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-4"
  >
    <div
      className="makeStyles-container-2"
    >
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <a
        className="makeStyles-root-6 makeStyles-item-3"
        download={true}
        href="s3://bucketA/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Bucket file without download button 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-4"
  >
    <div
      className="makeStyles-container-2"
    >
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        className="makeStyles-root-6 makeStyles-item-3"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package directory 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-4"
  >
    <div
      className="makeStyles-container-2"
    >
      <form
        action="/zip/package/bucketA/namespaceB/nameC/latest/dirD/"
        className="makeStyles-item-3"
        method="POST"
        style={
          {
            "flexShrink": 0,
          }
        }
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          className="makeStyles-root-6"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package directory without download button 1`] = `null`;

exports[`components/ListingActions RowActions should render Package file 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-4"
  >
    <div
      className="makeStyles-container-2"
    >
      <a
        className="makeStyles-root-6 makeStyles-item-3"
        download={true}
        href="s3://bucketa/pathB/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package file without download button 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if archived 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if no route 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if wrong route 1`] = `null`;
